fix bug responsive on mobile

--- a/p2/src/App.css
+++ b/p2/src/App.css
@@ -31,17 +31,16 @@ a:hover {
   color: white;
 }
 
-audio{
+audio {
   outline: none;
 }
 
-.poetry{
+.poetry {
   height: 390px;
   overflow: scroll;
-  
 }
 
-/*Makes sure scrollbar on poetry is always visible, code found on stackoverflow: https://stackoverflow.com/questions/7492062/css-overflow-scroll-always-show-vertical-scroll-bar*/
+/*Makes sure scrollbar on poetry is always visible*/
 ::-webkit-scrollbar {
   -webkit-appearance: none;
   width: 7px;
@@ -49,13 +48,13 @@ audio{
 
 ::-webkit-scrollbar-thumb {
   border-radius: 4px;
-  background-color: rgba(0, 0, 0, .5);
-  box-shadow: 0 0 1px rgba(255, 255, 255, .5);
+  background-color: rgba(0, 0, 0, 0.5);
+  box-shadow: 0 0 1px rgba(255, 255, 255, 0.5);
 }
 
 /* BUTTONS */
-#btnRound{
-  border-radius: 60%; 
+#btnRound {
+  border-radius: 60%;
   border-style: none;
 }
 button:hover {
@@ -66,10 +65,10 @@ button {
   font-size: 1.5vw;
   padding: 7px 20px;
   margin: 2.5vw;
-  outline: none;  
+  outline: none;
   border-radius: 20px;
   border-style: none;
-  background-color: #F1F3F4;
+  background-color: #f1f3f4;
 }
 button.button_interaction {
   font-size: 2vw;
@@ -77,13 +76,12 @@ button.button_interaction {
 
 /* BUTTONS */
 
-
 #header {
   width: 100vw;
   background-color: teal;
   color: white;
   font-size: 3vw;
-  padding-top: 12vw;
+  padding-top: 20vw;
   text-align: center;
 }
 
@@ -91,27 +89,27 @@ html {
   scroll-behavior: smooth !important;
 }
 
-div.gallery{
+div.gallery {
   padding: 5px;
   margin-top: 20px;
-  margin-right: 30px;
+  margin-right: 3vw;
 }
 
-#gallery-box{
+#gallery-box {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
-  padding: 45px 45px 0px 45px;
+  padding: 4.5vw 4.5vw 0vw 4.5vw;
 }
 
-p{
+p {
   padding: 0;
-  margin-top: 0px;;
+  margin-top: 0px;
 }
 
 /*SMALLER SCREENS AND PHONES*/
-@media screen and (max-width: 690px) {
+@media screen and (max-width: 959px) {
   @supports (display: flex) {
     .frontpage {
       flex-direction: column;
@@ -120,7 +118,6 @@ p{
       font-size: 60px;
       padding-top: 120px;
       padding-bottom: 120px;
-      
     }
     #header {
       margin: 0 auto;
@@ -131,20 +128,18 @@ p{
       display: flex;
       flex-direction: column;
       justify-content: center;
-      
     }
 
     #box {
       display: flex;
       flex-direction: column;
       justify-content: center;
-      
     }
   }
 }
 
 /*TABLET*/
-@media screen and (max-width: 2318px) and (min-width: 425px) {
+@media screen and (max-width: 2318px) and (min-width: 960px) {
   @supports (display: flex) {
     .frontpage {
       flex-direction: row;
@@ -167,6 +162,9 @@ p{
 
     #gallery_button {
       font-size: 62px;
+    }
+    #box {
+      padding-bottom: 3vw;
     }
 
     .gallery {
